--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
 }
 
 #logo {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -52,7 +52,7 @@ header {
 }
 
 #job {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
@@ -60,7 +60,7 @@ header {
 }
 
 #description {
-  font-family: Poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -75,4 +75,8 @@ header {
 .link {
   padding: 5px;
   background-color: transparent;
+}
+
+.link:hover {
+  background-color: #3c3a39;
 }
